<resources>
    <string name="app_name">佳木斯</string>
    <string name="title_name">佳木斯市政府</string>
    <string name="contact_us">联系我们</string>
    <string name="about_us">关于我们</string>
    <string name="setting">设置</string>
    <string name="about_app">关于APP</string>
    <string name="clear">清除缓存</string>
    <string name="update">检查更新</string>
    <string name="sqgk">市情概况</string>
    <string name="xwzx">新闻中心</string>
    <string name="gggs">公告公示</string>
    <string name="zwgk">政务公开</string>
    <string name="zxfw">在线服务</string>
    <string name="bmfw">便民服务</string>
    <string name="zmhd">政民互动</string>
    <string name="tzzn">投资指南</string>
    <string name="detail">查看详情</string>
    <string name="public_service">公共服务</string>
    <string name="bmcx">便民查询</string>
    <string name="bmjf">便民缴费</string>
    <string name="zfxxgkzd">政府信息公开制度</string>
    <string name="text">文本http://upload.jianshu.io/admin_banners/app_images/2542/5b04b8ccb01432425cb13dab1aed399da607b454.jpg</string>
    <string-array name="banner_image">
        <item>http://upload.jianshu.io/admin_banners/app_images/2542/5b04b8ccb01432425cb13dab1aed399da607b454.jpg</item>
        <item>http://upload.jianshu.io/admin_banners/app_images/2541/a665552696b860dad9783816b811af92d51e1892.jpg</item>
        <item>http://upload.jianshu.io/admin_banners/app_images/2383/126ffdb2dacadba08292bc2bf326cbeddb9e13f6.jpg</item>
        <item>http://upload.jianshu.io/admin_banners/app_images/2295/bf91c806e3b88e6f38f58c1f20367605f17cd797.jpg</item>
        <item>http://upload.jianshu.io/admin_banners/app_images/2474/82506437d78663c5ca0bee823bd4b7bed04b9b96.jpg</item>
        <item>http://upload.jianshu.io/admin_banners/app_images/2523/7207d4150a150f14efbdfc4411bf05b0199ceffa.jpg</item>
        <item>http://upload.jianshu.io/admin_banners/app_images/2540/9a7011f88c7fa0f471824111011ec8ffd08860f2.jpg</item>
    </string-array>
    <string-array name="banner_url">
        <item>http://www.jianshu.com/p/69a6da71e499</item>
        <item>http://www.jianshu.com/p/f9f72a86ee02</item>
        <item>http://www.jianshu.com/p/61907890ab0d</item>
        <item>http://www.jianshu.com/p/9348cbf32aad</item>
        <item>http://www.jianshu.com/p/087bd0713477</item>
        <item>http://www.jianshu.com/p/7c0a80c6e8a8</item>
        <item>http://www.jianshu.com/p/fef9771435a0</item>
    </string-array>
    <string name="title_activity_detail">DetailActivity</string>
</resources>
