<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:fresco="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical" android:background="@color/colorWhite">

    <View
        android:layout_width="match_parent"
        android:layout_height="40px"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent" android:id="@+id/about_us"
                android:layout_height="80dp" android:background="#ffff">
                <TextView
                    android:gravity="center_vertical|left"
                    android:textSize="20sp"
                    android:text="@string/about_us" android:textColor="#000000"
                    android:layout_width="200dp" android:layout_marginLeft="25dp"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:src="@drawable/right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
            </RelativeLayout>
            <View
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="20px"/>

            <RelativeLayout
                android:layout_width="match_parent" android:id="@+id/contact_us"
                android:layout_height="80dp" android:background="#ffff">
                <TextView
                    android:gravity="center_vertical|left"
                    android:textSize="20sp"
                    android:text="@string/contact_us" android:textColor="#000000"
                    android:layout_width="200dp" android:layout_marginLeft="25dp"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:src="@drawable/right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20px"/>

            <RelativeLayout android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="80dp" android:background="#ffff">
                <TextView
                    android:gravity="center_vertical|left"
                    android:textSize="20sp"
                    android:text="@string/setting" android:textColor="#000000"
                    android:layout_width="200dp" android:layout_marginLeft="25dp"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:src="@drawable/right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>
            </RelativeLayout>

        </LinearLayout>

</LinearLayout>
