<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" android:background="#EE3B3B">
        <ImageView android:id="@+id/iv_back"
            android:layout_width="50dp" android:src="@drawable/back"
            android:layout_height="wrap_content" android:layout_marginLeft="10dp"/>
        <TextView android:id="@+id/tv_title" android:layout_centerInParent="true"
            android:layout_width="wrap_content" android:text="@string/bmfw"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite" android:layout_marginTop="20dp"
            android:textSize="20sp" android:layout_marginLeft="5dp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="@color/colorWhite"
        tools:context="com.cn.gov.jms.ui.ZhengWuGongKaiActivity" android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent" android:orientation="vertical"
                android:layout_height="200dp"
                android:background="#ffff">
                <LinearLayout
                    android:layout_width="match_parent" android:orientation="vertical"
                    android:layout_height="wrap_content" android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content" android:text="@string/public_service"
                        android:layout_height="wrap_content" android:textSize="20sp"
                        android:textColor="#000"/>
                    <View
                        android:layout_width="match_parent" android:background="@drawable/realline"
                        android:layout_height="1dp" android:layout_marginTop="3dp"/>
                    <GridView
                        android:id="@+id/public_service_gridview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp" android:layout_marginTop="5dp"
                        android:numColumns="4" android:background="@drawable/public_service_bg"
                        ></GridView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent" android:orientation="vertical"
                android:layout_height="250dp"
                android:background="#ffff" android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent" android:orientation="vertical"
                    android:layout_height="wrap_content" android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content" android:text="@string/bmcx"
                        android:layout_height="wrap_content" android:textSize="20sp"
                        android:textColor="#000"/>
                    <View
                        android:layout_width="match_parent" android:background="@drawable/realline"
                        android:layout_height="1dp" android:layout_marginTop="3dp"/>
                    <GridView
                        android:id="@+id/bmcx_gridview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="3" android:layout_marginTop="5dp"
                        ></GridView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent" android:background="#ffff"
                android:layout_height="200dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent" android:orientation="vertical"
                    android:layout_height="match_parent" android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content" android:text="@string/bmjf"
                        android:layout_height="wrap_content" android:textSize="20sp"
                        android:textColor="#000"/>
                    <View
                        android:layout_width="match_parent" android:background="@drawable/realline"
                        android:layout_height="1dp" android:layout_marginTop="3dp"/>
                    <GridView
                        android:id="@+id/bmjf_gridview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="3" android:layout_marginTop="5dp"
                        ></GridView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    </ScrollView>
</LinearLayout>
